2004-02-20  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-import.c

	Fix for a warning, courtesy of Danilo Segan

2004-02-20  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	CFLAG -Werror is now optional

2004-02-19  Geert Stappers <stappers@stappers.nl>

	* ilogo.c

	Updated with the new logo, fixes bugzilla #134749.

2004-02-18  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Setting CFLAGS for more Warnings

2004-02-18  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-node-element-span.c

	Patch by Pav Lucistnik to fix build on gcc-2.95

2004-02-17  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	-- Release of 0.7.12 --

	* cong-editor-node-element-span.c

	Added Dialog of Doom for notifying users that they're about to fall foul of bug #124507, in lieu of actually finishing the fix in the WidgetPlayground branch

2004-02-11  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-export.c, cong-file-import.c, cong-file-print.c, cong-menus.c, cong-ui-hooks.h, popup.c, tree.c

	The various tree operations now use sane marshallers

	* popup.c

	More cleanups: making it easier to get rid of the final traces of GObject hackery

	* popup.c

	Cleaned up fiddly special-casing of stock items

	* cong-app.c, cong-dispspec-element.c, cong-dispspec-registry.c, cong-editor-area-text-comment.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area.c, cong-editor-node-text.c, cong-editor-widget3.c, cong-eel.c, cong-file-save.c, cong-menus.c, cong-node-properties-dialog.c, cong-primary-window.c, cong-tree-view.c, cong-util.c, cong-util.h, cursor.c, global.h, main.c, plugin-paragraph-area-paragraph.c, popup.c, select.c, tree.c, xmledit.c

	Clean up of UI hooks, moving from global.h into new header; use decent marshalling routines for the popup menu rather than evil GObject hackery

	* cong-ui-hooks.h, Makefile.am

	New file

	* popup.c

	More tidying up

	* cong-util.c, cong-util.h, popup.c
